[gd_scene load_steps=4 format=3 uid="uid://bqokxhofhov86"]

<<<<<<<< HEAD:scenes/ZXue/DynaMite/Scenes/Enemy_DynaMite.tscn
[ext_resource type="Script" uid="uid://3xfcy408ikw5" path="res://scenes/ZXue/DynaMite/Scripts/enemy_dyna_mite.gd" id="1_wqpmk"]
========
[ext_resource type="Script" uid="uid://3xfcy408ikw5" path="res://scenes/dev/ZXue/DynaMite/Scripts/enemy_dyna_mite.gd" id="1_wqpmk"]
>>>>>>>> c9a1bcb9ad91fd24526d5d61e65d8d5182d1d221:scenes/dev/ZXue/DynaMite/Scenes/Enemy_DynaMite.tscn

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wqpmk"]
radius = 0.1
height = 0.25

[sub_resource type="CapsuleMesh" id="CapsuleMesh_wqpmk"]

[node name="EnemyDynaMite" type="Node3D" groups=["Enemies"]]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)
script = ExtResource("1_wqpmk")

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]

[node name="Collision3D" type="CollisionShape3D" parent="CharacterBody3D"]
transform = Transform3D(5.405, 0, 0, 0, 5.405, 0, 0, 0, 5.405, 0, 0.499545, 0)
shape = SubResource("CapsuleShape3D_wqpmk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.53, 0, 0, 0, 1, 0, 0.536494, 0)
mesh = SubResource("CapsuleMesh_wqpmk")

[node name="SelfDestructionTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 4.0

[node name="ExplosionResponse" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 1.0
anchor_top = 0.107
anchor_right = 1.0
anchor_bottom = 0.11
offset_left = -361.0
offset_top = -21.336
offset_right = -188.0
offset_bottom = -0.280006
scale = Vector2(1.84, 1.84)
text = "DYNAMITE EXPLODED!"

[node name="DeathTimer" type="Timer" parent="."]

[node name="LocationOrigin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5289483, 0)

[connection signal="timeout" from="SelfDestructionTimer" to="." method="_on_self_destruction_timer_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
